--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
     </div>
     <div class="container">
-        <div class="card cor-card" style="width: 40rem;">
+        <div class="card cor-card" style="width: 35%;">
             
             <div class="card-body card-1">
               <h5 class="card-title">Marvel’s Spider-Man 2</h5>
