--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
           </div>
     </div>
     <div class="container">
-        <div class="card cor-card" style="width: 35vw;">
-            
+        <div class="card cor-card" id="celular">
             <div class="card-body card-1">
               <h5 class="card-title">Marvel’s Spider-Man 2</h5>
               <p class="card-text">Sony Interactive Entertainment
