--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           </div>
     </div>
     <div class="container">
+      <div class="col-md-6">
         <div class="card cor-card" id="celular">
             <div class="card-body card-1">
               <h5 class="card-title">Marvel’s Spider-Man 2</h5>
@@ -45,6 +46,7 @@
               </div>
             </div>
           </div>
+      </div>
     </div>
     <div class="container meio">
       <div class="row">
